--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Squada+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,300&family=Squada+One&display=swap");
+
 @import "./animation.scss";
 @import "./base.scss";
 @import "./pages.scss";
