--- a/assets/scss/components/pages.scss
+++ b/assets/scss/components/pages.scss
@@ -22,7 +22,7 @@ body.home {
 
 body.error .planet,
 body.home .planet {
-  background: url("images/planets/planet-green.png") 0 0 no-repeat;
+  background: url("images/planets/planet-green.png") 0 -150px no-repeat;
 }
 
 body.about {
