--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Squada+One&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,300&family=Squada+One&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Squada+One&display=swap');
 
 @import "./animation.scss";
 @import "./base.scss";
-@import "./pages.scss";
+@import "./components/pages.scss";
+@import "./components/images.scss";
+@import "./components/buttons.scss";
