home game catalog

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -6,3 +6,4 @@
 @import "./components/pages.scss";
 @import "./components/images.scss";
 @import "./components/buttons.scss";
+@import "./components/sections.scss";
