home game listing

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -4,6 +4,7 @@
 @import "./animation.scss";
 @import "./base.scss";
 @import "./components/pages.scss";
+@import "./components/sections.scss";
 @import "./components/images.scss";
 @import "./components/buttons.scss";
-@import "./components/sections.scss";
+@import "./components/games.scss";
