--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -12,7 +12,7 @@ body {
   font-weight: 300;
   letter-spacing: 1px;
   line-height: 180%;
-  -webkit-text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px;
+  overflow-x: hidden;
 }
 article,
 aside,
