--- a/assets/scss/components/game.scss
+++ b/assets/scss/components/game.scss
@@ -90,7 +90,10 @@
   &:hover {
     background-color: #512e85;
 
-    .company, .company > a, .description, .title {
+    .company,
+    .company > a,
+    .description,
+    .title {
       color: #fff;
     }
   }
@@ -100,7 +103,9 @@
       color: #ff8c1c;
     }
 
-    .company, .company > a, .description {
+    .company,
+    .company > a,
+    .description {
       color: #fff;
     }
   }
@@ -111,76 +116,75 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
   margin: 0.9375rem 0.9375rem 0 0;
   min-width: 170px;
-  transition: box-shadow 0.2s cubic-bezier(0.25, 0.75, 0.5, 1.25),
-    transform 0.2s cubic-bezier(0.25, 0.75, 0.5, 1.25);
+  transition: box-shadow 0.2s cubic-bezier(0.25, 0.75, 0.5, 1.25), transform 0.2s cubic-bezier(0.25, 0.75, 0.5, 1.25);
 
-    .content {
-      display: flex;
-      flex-direction: column;
-      height: 5.8rem;
-      padding: 0.9375rem;
-    }
+  .content {
+    display: flex;
+    flex-direction: column;
+    height: 5.8rem;
+    padding: 0.9375rem;
+  }
 
-    .title {
-      flex: 1;
-    }
+  .title {
+    flex: 1;
+  }
 
-    .company {
-      margin-top: auto;
+  .company {
+    margin-top: auto;
 
-      & > a {
-        color: #ff3a56;
+    & > a {
+      color: #ff3a56;
 
-        &:hover {
-          color: #ff8c1c;
-        }
+      &:hover {
+        color: #ff8c1c;
+      }
 
-        &:active {
-          color: #44a5ab;
-        }
+      &:active {
+        color: #44a5ab;
       }
     }
+  }
 
-    .type {
-      border-radius: 1px;
-      bottom: 0;
-      height: 30px;
-      left: 0;
-      margin: 0.9375rem;
-      position: absolute;
-      width: 30px;
-      z-index: 1;
-    }
+  .type {
+    border-radius: 1px;
+    bottom: 0;
+    height: 30px;
+    left: 0;
+    margin: 0.9375rem;
+    position: absolute;
+    width: 30px;
+    z-index: 1;
+  }
 
-    .exclusive {
-      height: 50% !important;
-      left: auto;
-      margin: 0 auto !important;
-      right: 0 !important;
-      width: 50% !important;
-    }
+  .exclusive {
+    height: 50% !important;
+    left: auto;
+    margin: 0 auto !important;
+    right: 0 !important;
+    width: 50% !important;
+  }
 
-    &:hover {
-      background-color: #512e85;
-    }
+  &:hover {
+    background-color: #512e85;
+  }
 
-    &:active {
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.13);
-      transform: translateY(-5px);
-    }
+  &:active {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.13);
+    transform: translateY(-5px);
+  }
 }
 
-.game.list[data-v-108e2dda] {
+.game.list {
   display: flex;
   flex-flow: row wrap;
   padding: 0.625rem;
   width: 100%;
 
-  .content[data-v-108e2dda] {
+  .content {
     margin-left: 2.5rem;
   }
 
-  .title[data-v-108e2dda] {
+  .title {
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     display: -webkit-box;
@@ -190,7 +194,7 @@
   }
 
   .company {
-    & > a[data-v-108e2dda] {
+    & > a {
       color: #44a5ab;
 
       &:hover {
@@ -203,7 +207,7 @@
     }
   }
 
-  .description[data-v-108e2dda] {
+  .description {
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     display: block;
@@ -212,11 +216,11 @@
     text-overflow: ellipsis;
   }
 
-  .thumbnail[data-v-108e2dda] {
+  .thumbnail {
     max-width: 5rem;
   }
 
-  .type[data-v-108e2dda] {
+  .type {
     display: none;
   }
 
@@ -247,10 +251,10 @@
     }
   }
 
-  .game.list[data-v-108e2dda] {
+  .game.list {
     padding: 0.4545rem;
 
-    .content[data-v-108e2dda] {
+    .content {
       margin-left: 2.728rem;
     }
   }
