--- a/assets/scss/components/section.scss
+++ b/assets/scss/components/section.scss
@@ -18,7 +18,7 @@ section {
       padding: 1.111em;
     }
 
-    .gd-button {
+    .xg-button {
       width: calc(86% - 2.222em);
     }
   }
@@ -35,7 +35,7 @@ section {
         padding: 0;
       }
 
-      .gd-button {
+      .xg-button {
         min-width: 220px;
         width: auto;
       }
