--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -201,6 +201,27 @@ header small {
   text-transform: uppercase;
 }
 
+h1,
+h2,
+h3 {
+  border-bottom: 0;
+  color: #4e96a0;
+  display: block;
+  font-size: 1.5rem;
+  margin-bottom: 0;
+  padding: 0.4rem 0.2rem;
+  text-shadow: 0 0 0 transparent;
+}
+h1,
+h2,
+h3 {
+  border-top: 1px solid #dedede;
+}
+h1 {
+  border-bottom: 1px solid #dedede;
+  font-size: 2.5rem;
+}
+
 header {
   position: relative;
 }
