--- a/assets/scss/components/image.scss
+++ b/assets/scss/components/image.scss
@@ -28,7 +28,7 @@ img[src=""] {
   right: 0;
   top: 0;
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 .image.is-1by1,
 .image.is-square {
