register, login page

--- a/assets/scss/animation.scss
+++ b/assets/scss/animation.scss
@@ -66,3 +66,13 @@
     transform: scale(1);
   }
 }
+
+@keyframes animStar {
+  from {
+    transform: translateY(0px);
+  }
+
+  to {
+    transform: translateY(-2000px);
+  }
+}
