--- a/assets/scss/components/pages.scss
+++ b/assets/scss/components/pages.scss
@@ -12,6 +12,23 @@ body.home {
   background: linear-gradient(270deg, #24b3c0, #1b3786, #24b3c0);
 }
 
+body.auth {
+  color: #fff;
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+  font-size: 0.875rem;
+  background: radial-gradient(ellipse at bottom, #11172b 0%, #0b0f1d 100%);
+  font-family: Roboto, "Open Sans";
+  font-weight: 400;
+  line-height: 1.43;
+  background-color: #fafafa;
+}
+
+body.register {
+  overflow-y: scroll;
+}
+
 .planet {
   height: calc(100% - 579px);
   position: absolute;
