skeleton home promo

--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -467,3 +467,14 @@ form select {
     width: 1280px;
   }
 }
+
+.skeleton {
+  background-color: hsla(0, 0%, 88%, 0.3);
+  background-image: linear-gradient(90deg, rgba(#ccc, 0), rgba(#ccc, 0.5), rgba(#ccc, 0));
+  background-size: 40px 100%;
+  background-repeat: no-repeat;
+  background-position: left -40px top 0;
+  animation: shine 1s ease infinite;
+  border-radius: 4px;
+  border: none;
+}
