--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Squada+One&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Squada+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Squada+One&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @import "./animation.scss";
 @import "./base.scss";
