--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -11,3 +11,4 @@
 @import "./components/section.scss";
 @import "./components/image.scss";
 @import "./components/button.scss";
+@import "@vueform/multiselect/themes/default.css";
