--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -6,9 +6,9 @@ html {
 body {
   margin: 0;
   background: #fff;
-  color: #999;
+  color: #333;
   font-family: "Roboto", sans-serif;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 300;
   letter-spacing: 1px;
   line-height: 180%;
