list with pagination + add new game

--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -455,3 +455,10 @@ select {
   border-radius: 4px;
   border: none;
 }
+
+.error {
+  display: inline-block;
+  margin-top: 8px;
+  color: #ca2f37;
+  font-size: 12px;
+}
