--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -258,7 +258,7 @@ small {
 
 p {
   font-size: 1em;
-  margin: 0.556em auto;
+  margin: 0;
 }
 
 ul {
@@ -273,6 +273,7 @@ ul li {
 .xg-input {
   padding: 0 15px;
   width: 100%;
+  height: 40px;
 }
 
 input,
@@ -409,10 +410,6 @@ textarea {
 }
 
 @media (min-width: 640px) {
-  p {
-    margin: 1.818em auto 2.727em;
-  }
-
   .xg-button {
     font-size: 0.909em;
   }
