--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -3,6 +3,9 @@ html {
   -webkit-text-size-adjust: 100%;
   font-family: sans-serif;
 }
+* {
+  font-family: "Roboto", sans-serif;
+}
 body {
   margin: 0;
   background: #fff;
@@ -180,44 +183,44 @@ th {
   padding: 0;
 }
 
-h1,
-h2,
-h3,
-h4,
-header small {
-  border-bottom: 1px solid transparent;
-  border-top: 1px solid transparent;
-  color: #fff;
-  display: inline-block;
-  font-family: "Squada One", cursive;
-  font-size: 2.556em;
-  font-weight: 400;
-  letter-spacing: 2px;
-  line-height: 1em;
-  margin: 0;
-  padding: 13px 1px;
-  text-shadow: 0 0.07em 0 rgba(0, 0, 0, 0.5);
-  text-transform: uppercase;
-}
+// h1,
+// h2,
+// h3,
+// h4,
+// header small {
+//   border-bottom: 1px solid transparent;
+//   border-top: 1px solid transparent;
+//   color: #fff;
+//   display: inline-block;
+//   font-family: "Squada One", cursive;
+//   font-size: 2.556em;
+//   font-weight: 400;
+//   letter-spacing: 2px;
+//   line-height: 1em;
+//   margin: 0;
+//   padding: 13px 1px;
+//   text-shadow: 0 0.07em 0 rgba(0, 0, 0, 0.5);
+//   text-transform: uppercase;
+// }
 
-h1,
-h2,
-h3 {
-  border-bottom: 0;
-  color: #4e96a0;
-  display: block;
-  margin-bottom: 0;
-  padding: 0.4rem 0.2rem;
-  text-shadow: 0 0 0 transparent;
-}
-h1,
-h2,
-h3 {
-  border-top: 1px solid #dedede;
-}
-h1 {
-  border-bottom: 1px solid #dedede;
-}
+// h1,
+// h2,
+// h3 {
+//   border-bottom: 0;
+//   color: #4e96a0;
+//   display: block;
+//   margin-bottom: 0;
+//   padding: 0.4rem 0.2rem;
+//   text-shadow: 0 0 0 transparent;
+// }
+// h1,
+// h2,
+// h3 {
+//   border-top: 1px solid #dedede;
+// }
+// h1 {
+//   border-bottom: 1px solid #dedede;
+// }
 
 header {
   position: relative;
@@ -266,7 +269,6 @@ ul {
   padding: 0;
 }
 ul li {
-  color: #999;
   list-style: none;
 }
 
