--- a/assets/scss/components/promo-tile-item.scss
+++ b/assets/scss/components/promo-tile-item.scss
@@ -1,5 +1,6 @@
 .promo-tile-item {
   display: flex;
+  flex: 1;
   flex-direction: column;
   margin: 5px 0;
 
@@ -53,7 +54,7 @@
       text-align: left;
       text-shadow: 0 0 0 transparent;
 
-      h3 {
+      h3 a {
         display: block;
         font-size: 42px;
         letter-spacing: 2px;
@@ -140,7 +141,7 @@
       padding: 20px;
       position: relative;
 
-      h4 {
+      h4 a{
         display: block;
         font-size: 24px;
         letter-spacing: 2px;
